implementations/rust/ockam/ockam/tests/node_attribute/fails_if_unused_context_empty_fnbody.stderr
error: Function body Cannot be Empty.
 --> $DIR/fails_if_unused_context_empty_fnbody.rs:5:10
  |
5 | async fn main(_ctx: ockam::Context) {}
  |          ^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/fails_if_unused_context_empty_fnbody.rs:4:1
  |
4 | / #[ockam::node]
5 | | async fn main(_ctx: ockam::Context) {}
  | |______________________________________^ consider adding a `main` function to `$DIR/tests/node_attribute/fails_if_unused_context_empty_fnbody.rs`
